# terlan

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  README_TEMPLATE.md  ROADMAP_0_0_7.md  install.ps1  install.sh  rust-toolchain.toml
crates/terlan/: Cargo.toml  README.md  cli.mk
crates/terlan/src/: README.md  formal_pipeline.rs  formal_pipeline_test.rs  main.rs
crates/terlan/src/backends/: README.md  mod.rs
crates/terlan/src/backends/erlang/: README.md  emit.rs  emit_test.rs  mod.rs  pretty.rs  pretty_test.rs
crates/terlan/src/backends/wasm/: README.md  abi.rs  backend_ir.rs  emit.rs  emit_test.rs  mod.rs  types.rs  types_test.rs
crates/terlan/src/commands/: README.md  artifacts.README.md  artifacts.rs  artifacts_test.rs  integration_test.rs  json.rs  mod.rs  native_vector_runtime.rs  native_vector_runtime_test.rs  otp_runtime.rs  otp_runtime_test.rs  safe_native_runtime.rs  safe_native_runtime_test.rs  sql_runtime.rs  vm.rs  vm_test.rs
crates/terlan/src/commands/api/: README.md  mod.rs  mod_test.rs
crates/terlan/src/commands/artifacts/: README.md  templates.rs
crates/terlan/src/commands/bind/: bind_test.rs  mod.rs  polars_probe.rs  polars_probe_files.rs  ts_dom_module_mapping.rs  ts_dom_module_mapping_test.rs  ts_input_manifest_test.rs  ts_parser_adapter.rs  ts_type_mapping.rs
crates/terlan/src/commands/check/: mod.rs  mod_test.rs
crates/terlan/src/commands/clean/: clean_test.rs
crates/terlan/src/commands/db/: README.md  args.rs  execution.rs  execution_test.rs  history.rs  history_test.rs  mod.rs  mod_test.rs
crates/terlan/src/commands/deploy/: deploy_test.rs  mod.rs
crates/terlan/src/commands/doc/: doc_test.rs  mod.rs  render.rs  render_test.rs  validation.rs  validation_test.rs
crates/terlan/src/commands/emit/: README.md  mod.rs
crates/terlan/src/commands/emit_js/: README.md  cast_emit_test.rs  cast_semantics.rs  core_lowering.rs  core_lowering_test.rs  declarations.rs  direct_ast.rs  direct_ast_test.rs  direct_reachability.rs  emit_js_test.rs  mod.rs  oxc_backend.rs  std_core_string_intrinsic_test.rs  std_core_string_intrinsics.rs
crates/terlan/src/commands/emit_native_metadata/: README.md  artifacts.rs  mod.rs
crates/terlan/src/commands/emit_rust/: emit_rust_test.rs  mod.rs
crates/terlan/src/commands/fmt/: README.md  fmt_test.rs  mod.rs
crates/terlan/src/commands/hover/: README.md  hover_test.rs  html.rs  mod.rs  scanner.rs
crates/terlan/src/commands/init/: init_test.rs  mod.rs
crates/terlan/src/commands/interface/: README.md  mod.rs
crates/terlan/src/commands/lsp/: README.md  mod.rs  mod_test.rs
crates/terlan/src/commands/repl/: bindings.rs  evaluator.rs  event.rs  help.rs  mod.rs  repl_test.rs  source.rs
crates/terlan/src/commands/run/: mod.rs  run_test.rs
crates/terlan/src/commands/serve/: README.md  args.rs  compose_check.rs  compose_test.rs  handler.rs  handler_test.rs  logging.rs  manifest_test.rs  mod.rs  serve_test.rs  tls.rs  tls_test.rs  watch_test.rs  websocket.rs
crates/terlan/src/compiler/: README.md  api_contract.rs  api_contract_test.rs  mod.rs  router.rs
crates/terlan/src/html/: README.md  artifact_test.rs  base_path.rs  escaping_test.rs  header.rs  lib_test.rs  metadata.rs  parser.rs  structured.rs  structured_test.rs
crates/terlan/src/lsp/: README.md  document.rs  hover.rs  hover_test.rs  import_actions.rs  lib_test.rs  main.rs  mod.rs
crates/terlan/src/quality/: README.md  cli_exact_selectors.rs  erlang_modernization.rs  erlang_modernization_test.rs  inline_tests.rs  internal_docs.rs  lib_test.rs  main.rs  mod.rs  module_readmes.rs  module_readmes_test.rs  oxc_boundary.rs  oxc_boundary_test.rs  test_hierarchy.rs  test_hierarchy_test.rs
crates/terlan/src/runtime/: README.md  mod.rs  vm.rs  vm_test.rs
crates/terlan/src/support/: mod.rs  test_fs.rs
crates/terlan/src/tests/: README.md  check_beam_std_test.rs  check_constructor_identity_manifest_test.rs  check_phase_manifest_smoke_test.rs  command_transition_test.rs  doc_test.rs  emit_js_test.rs  help_test.rs  interface_test.rs  mod.rs  target_profile_test.rs
crates/terlan/src/validation/: README.md  mod.rs
crates/terlan/src/vm/: README.md  commands.rs  main.rs  main_test.rs
crates/terlan_cli/: Cargo.toml  README.md  cli.mk
crates/terlan_cli/src/: formal_pipeline.README.md  formal_pipeline.rs  formal_pipeline_test.rs  main.rs  main_test.rs  support.README.md  support.rs  support_test.rs
crates/terlan_cli/src/commands/: README.md  artifacts.rs  artifacts_test.rs  integration_test.rs  json.rs  json_test.rs  mod.rs  native_vector_runtime.rs  safe_native_runtime.rs  source_layout.rs  sql_runtime.rs  sql_runtime_test.rs  web_route.rs  web_route_test.rs
crates/terlan_cli/src/validation/: README.md
crates/terlan_lsp/: Cargo.toml  README.md  lsp.mk
crates/terlan_lsp/src/: README.md  document.rs  hover.rs  hover_test.rs  import_actions.rs  import_actions_test.rs  lib.rs  lib_test.rs  main.rs
crates/terlan_safenative/: Cargo.toml  README.md  safenative.mk
crates/terlan_safenative/src/: README.md  base64.rs  base64_test.rs  credit.rs  credit_test.rs  dispatch.rs  dispatch_test.rs  error.rs  error_test.rs  handle.rs  http.rs  http_test.rs  json.rs  json_test.rs  lib.rs  path.rs  postgres.rs  postgres_test.rs  request.rs  request_test.rs  resource.rs  resource_test.rs  runtime.rs  runtime_test.rs  term.rs  term_test.rs  uri.rs  vector.rs  vector_test.rs  worker.rs
crates/terlan_safenative/src/dispatch/: README.md  args.rs  arity.rs
crates/terlan_safenative/src/http/: README.md  request.rs
(+8072 files in other folders)
