[workspace]
resolver = "2"
members = [
  "crates/terlan_syntax",
  "crates/terlan_html",
  "crates/terlan_hir",
  "crates/terlan_typeck",
  "crates/terlan_erlang",
  "crates/terlan_safenative",
  "crates/terlan_wasm",
  "crates/terlan_cli",
  "crates/terlan_lsp",
  "crates/terlan_quality",
]

[workspace.package]
version = "0.0.5"
edition = "2021"
