[package]
name = "terlan_cli"
version.workspace = true
edition.workspace = true

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage)'] }

[[bin]]
name = "terlc"
path = "src/main.rs"

[dependencies]
terlan_syntax = { path = "../terlan_syntax" }
terlan_erlang = { path = "../terlan_erlang" }
terlan_hir = { path = "../terlan_hir" }
terlan_html = { path = "../terlan_html" }
terlan_typeck = { path = "../terlan_typeck" }
terlan_lsp = { path = "../terlan_lsp" }
terlan_safenative = { path = "../terlan_safenative" }
base64 = "0.22.1"
oxc_allocator = "0.134.0"
oxc_ast = "0.134.0"
oxc_codegen = "0.134.0"
oxc_parser = "0.134.0"
oxc_span = "0.134.0"
oxc_syntax = "0.134.0"
bytes = "1"
futures-util = "0.3"
http = "1.3.1"
http-body-util = { version = "0.1.3", features = ["channel", "full"] }
hyper = { version = "1.10.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.20", features = ["http1", "server", "tokio"] }
instant-acme = "0.7"
notify = "8"
percent-encoding = "2.3.2"
rcgen = "0.13"
refinery = "0.8"
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = "0.26"
tokio-tungstenite = "0.28"
url = "2.5.8"
docker-compose-types = "0.24.0"

[dev-dependencies]
