[package]
name = "terlan_safenative"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
cookie = "0.18"
deadpool-postgres = "0.14"
http = "1.3.1"
mime_guess = "2"
serde_json = "1.0"
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
url = "2.5.8"
